--- a/index.html
+++ b/index.html
@@ -23,19 +23,13 @@
             <li class="nav__item"><a href="" class="nav__link">find more</a></li>
           </ul>
         </nav>
-        <div class="header__container-icon">
-          <div class="header__wrap-icon">
-            <img src="./img/twitter-white.png" alt="Twitter" class="header__icon">
-          </div>
-          <div class="header__wrap-icon">
-            <img src="./img/facebook-white.png" alt="Facebook" class="header__icon">
-          </div>
-          <div class="header__wrap-icon">
-            <img src="./img/instagram-white.png" alt="Instagram" class="header__icon">
-          </div>
+        <div class="social header__social">
+          <img src="./img/twitter-white.png" alt="Twitter" class="social__icon">
+          <img src="./img/facebook-white.png" alt="Facebook" class="social__icon">
+          <img src="./img/instagram-white.png" alt="Instagram" class="social__icon">
         </div>
-        <div class="header__container-hamburger">
-          <img src="./img/Hamburger.png" alt="Hamburger" class="header__hamburger">
+        <div class="header__container-menu">
+          <img src="./img/Hamburger.png" alt="Hamburger Menu" class="header__menu">
         </div>
       </div>
       <h2 class="title header__title">
@@ -119,10 +113,10 @@
             <p class="text--large testimonial__name">lulu hoffman</p>
             <p class="text--large testimonial__division">Marketing Consultant at okodesign.net</p>
             <p class="text testimonial__description">If you are an entrepreneur, you know that your success cannot depend on the opinions of others. Like the wind, opinions change…like the weather, opinions change frequently.</p>
-            <div class="testimonial__wrap-icon">
-              <img src="./img/linkedin-yellow.png" alt="Linkedin" class="testimonial__icon">
-              <img src="./img/twitter-yellow.png" alt="Twitter" class="testimonial__icon">
-              <img src="./img/google-plus-yellow.png" alt="Google Plus" class="testimonial__icon">
+            <div class="social testimonial__social">
+              <img src="./img/linkedin-yellow.png" alt="Linkedin" class="social__icon testimonial__icon">
+              <img src="./img/twitter-yellow.png" alt="Twitter" class="social__icon testimonial__icon">
+              <img src="./img/google-plus-yellow.png" alt="Google Plus" class="social__icon social__icon--large testimonial__icon">
             </div>
           </div>
         </div>
@@ -134,9 +128,9 @@
             <p class="text--large testimonial__name">elsie dunkan</p>
             <p class="text--large testimonial__division">Project Manager at okodesign.net</p>
             <p class="text testimonial__description">Ever heard of the Fuller Brush Man? You know, those legendary guys who came knocking on the front doors of America, selling brushes, mops and cleaners?</p>
-            <div class="testimonial__wrap-icon">
-              <img src="./img/facebook-yellow.png" alt="Facebook" class="testimonial__icon">
-              <img src="./img/twitter-yellow.png" alt="Twitter" class="testimonial__icon">
+            <div class="social testimonial__social">
+              <img src="./img/facebook-yellow.png" alt="Facebook" class="social__icon testimonial__icon">
+              <img src="./img/twitter-yellow.png" alt="Twitter" class="social__icon testimonial__icon">
             </div>
           </div>
         </div>
@@ -148,10 +142,10 @@
             <p class="text--large testimonial__name">dustin gonzales</p>
             <p class="text--large testimonial__division">CEO at hofmannui.net</p>
             <p class="text testimonial__description">Do you remember the story of “The Wizard of Oz”? In this story we saw the characters of Dorothy, who had wanted to run away from home because she thought there was a better place somewhere.</p>
-            <div class="testimonial__wrap-icon">
-              <img src="./img/facebook-yellow.png" alt="Facebook" class="testimonial__icon">
-              <img src="./img/linkedin-yellow.png" alt="Linkedin" class="testimonial__icon">
-              <img src="./img/google-plus-yellow.png" alt="Google Plus" class="testimonial__icon">
+            <div class="social testimonial__social">
+              <img src="./img/facebook-yellow.png" alt="Facebook" class="social__icon testimonial__icon">
+              <img src="./img/linkedin-yellow.png" alt="Linkedin" class="social__icon testimonial__icon">
+              <img src="./img/google-plus-yellow.png" alt="Google Plus" class="social__icon social__icon--large testimonial__icon">
             </div>
           </div>
         </div>
@@ -163,11 +157,11 @@
             <p class="text--large testimonial__name">laura parks</p>
             <p class="text--large testimonial__division">UX Lead at hofmannui.net</p>
             <p class="text testimonial__description">They are big, bold and beautiful. Billboards have been around for quite a while. In almost all places nowadays you can find billboards of just about every product there is in the market. No matter how you see it, billboard advertising is on the rise.</p>
-            <div class="testimonial__wrap-icon">
-              <img src="./img/facebook-yellow.png" alt="Facebook" class="testimonial__icon">
-              <img src="./img/linkedin-yellow.png" alt="Linkedin" class="testimonial__icon">
-              <img src="./img/twitter-yellow.png" alt="Twitter" class="testimonial__icon">
-              <img src="./img/google-plus-yellow.png" alt="Google Plus" class="testimonial__icon">
+            <div class="social testimonial__social">
+              <img src="./img/facebook-yellow.png" alt="Facebook" class="social__icon testimonial__icon">
+              <img src="./img/linkedin-yellow.png" alt="Linkedin" class="social__icon testimonial__icon">
+              <img src="./img/twitter-yellow.png" alt="Twitter" class="social__icon testimonial__icon">
+              <img src="./img/google-plus-yellow.png" alt="Google Plus" class="social__icon social__icon--large testimonial__icon">
             </div>
           </div>
         </div>
@@ -433,26 +427,26 @@
             </div>
           </div>
         </div>
-        <div class="project__pagination">
-          <div class="project__wrap-prev">
-            <img src="./img/prev.png" alt="Prev" class="prev">
+        <div class="pagination">
+          <div class="pagination__wrap-prev">
+            <img src="./img/prev.png" alt="Prev" class="pagination__prev">
           </div>
-          <div class="project__wrap-number">
-            <p class="project__number">1</p>
+          <div class="pagination__wrap-number">
+            <p class="pagination__number">1</p>
           </div>
-          <div class="project__wrap-number">
-            <p class="project__number">2</p>
+          <div class="pagination__wrap-number">
+            <p class="pagination__number">2</p>
           </div>
-          <div class="project__wrap-number">
-            <p class="project__number">3</p>
+          <div class="pagination__wrap-number">
+            <p class="pagination__number">3</p>
           </div>
-          <div class="project__wrap-number">
-            <p class="project__number project__number--active">4</p>
+          <div class="pagination__wrap-number">
+            <p class="pagination__number pagination__number--active">4</p>
           </div>
-          <div class="project__wrap-number project__wrap-number--five">
-            <p class="project__number project__number">5</p>
+          <div class="pagination__wrap-number pagination__wrap-number--visible">
+            <p class="pagination__number">5</p>
           </div>
-          <div class="project__wrap-next">
+          <div class="pagination__wrap-next">
             <img src="./img/next.png" alt="Next" class="next">
           </div>
         </div>
@@ -467,12 +461,12 @@
         <p class="text--large text--white team__sub-heading">CHIEF ENGINEER</p>
         <div class="team__wrap-content">
           <p class="text text--white team__description">I’ve started to work in company at 2009. Photographs are a way of preserving a moment in our lives for the rest of our lives. Many of us have at least been tempted at the flashy array of photo printers which seemingly leap off the shelves at even the least tech-savvy. It surely seems old fashioned to talk about 35mm film and non-digital cameras in today’s day and age.</p>
-          <div class="team__dot-nav">
-            <div class="team__dot team__dot--active"></div>
-            <div class="team__dot"></div>
-            <div class="team__dot"></div>
-            <div class="team__dot"></div>
-            <div class="team__dot"></div>
+          <div class="dot">
+            <div class="dot__item dot__item--active"></div>
+            <div class="dot__item"></div>
+            <div class="dot__item"></div>
+            <div class="dot__item"></div>
+            <div class="dot__item"></div>
           </div>
         </div>
       </div>
@@ -507,12 +501,12 @@
             <img src="./img/phone.png" alt="Phone" class="contact__icon icon-phone">
               <p class="text contact__content">793-891-7938, 952-775-6021</p>
           </div>
-          <div class="contact__wrap-social">
-            <img src="./img/Pinterest.png" alt="Pinterest" class="icon-social contact__pinterest">
-            <img src="./img/linkedin.png" alt="Linkedin" class="icon-social contact__linkedin">
-            <img src="./img/google-plus.png" alt="Google Plus" class="contact__google">
-            <img src="./img/twitter.png" alt="Twitter" class="icon-social contact__twitter">
-            <img src="./img/facebook.png" alt="Facebook" class="icon-social contact__facebook">
+          <div class="social contact__social">
+            <img src="./img/Pinterest.png" alt="Pinterest" class="social__icon">
+            <img src="./img/linkedin.png" alt="Linkedin" class="social__icon">
+            <img src="./img/google-plus.png" alt="Google Plus" class="social__icon social__icon--large">
+            <img src="./img/twitter.png" alt="Twitter" class="social__icon">
+            <img src="./img/facebook.png" alt="Facebook" class="social__icon">
           </div>
         </div>
       </div>
@@ -570,13 +564,13 @@
             </ul>
             <div class="footer__wrap-follow">
               <p class="text--large text--white footer__heading">follow us</p>
-              <div class="footer__wrap-social">
-                <img src="./img/Pinterest-yellow.png" alt="Pinterest" class="footer__social">
-                <img src="./img/linkedin-yellow.png" alt="Linkedin" class="footer__social">
-                <img src="./img/google-plus-yellow.png" alt="Google plus" class="footer__social footer__social--google">
-                <img src="./img/twitter-yellow.png" alt="Twitter" class="footer__social">
-                <img src="./img/facebook-yellow.png" alt="Facebook" class="footer__social">
-                <img src="./img/instagram-yellow.png" alt="Instagram" class="footer__social">
+              <div class="social footer__social">
+                <img src="./img/Pinterest-yellow.png" alt="Pinterest" class="social__icon">
+                <img src="./img/linkedin-yellow.png" alt="Linkedin" class="social__icon">
+                <img src="./img/google-plus-yellow.png" alt="Google plus" class="social__icon social__icon--large">
+                <img src="./img/twitter-yellow.png" alt="Twitter" class="social__icon">
+                <img src="./img/facebook-yellow.png" alt="Facebook" class="social__icon">
+                <img src="./img/instagram-yellow.png" alt="Instagram" class="social__icon">
               </div>
             </div>
             <p class="text text--white footer__copy-right">
